# Helmsman

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  actions.md  pyproject.toml
.github/workflows/: api-deploy.yml  test.yml  web-deploy.yml
apps/teams-app/: FACE_SIGNALS_CHECKLIST.md  README.md  SIDELOAD.md  manifest.json
apps/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/scripts/: fetch-face-model.mjs
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: AppShell.tsx  BotMissionCard.tsx  BotStatusStrip.tsx  CostCard.tsx  DocumentUpload.tsx  GoalEditor.tsx  GroupAttachment.tsx  InterventionFeed.tsx  LiveTranscript.tsx  MeetingPulse.tsx  MeetingSettings.tsx  OnboardingSteps.tsx  ParticipantsPanel.tsx  RecentMeetings.tsx  ReportPanel.tsx  RightNowStrip.tsx  Sidebar.tsx  SoloMicCard.tsx  TeamsBotInvite.tsx  UsageSummaryCard.tsx  UtteranceConsole.tsx
apps/web/src/hooks/: useBrowserSTT.ts  useFaceSignalUploader.ts  useFaceSignals.ts  useInView.ts  useUtteranceLog.ts
apps/web/src/lib/: api.ts  augmented.ts  gini.ts  store.ts  teams.ts  tone.ts
apps/web/src/pages/: CreateMeeting.tsx  GroupDetail.tsx  Groups.tsx  Help.tsx  History.tsx  Insights.tsx  JoinMeeting.tsx  Landing.tsx  MeetingRoom.tsx  TeamsConfig.tsx
docs/: brushup-proposals.md  demo-numbers.md  demo-storyboard.md  eval-results.md  zenn-article-draft.md  zenn-article-v2.md  zenn-article-v3.md
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: acs.bicep  aisearch.bicep  containerapps.bicep  cosmosdb.bicep  docintel.bicep  functions.bicep  keyvault.bicep  monitoring.bicep  signalr.bicep  speech.bicep  staticwebapp.bicep  storage.bicep
scripts/: eval_offline.py  gen_demo_audio.py  smoke_rag.py  smoke_report.py
scripts/fixtures/: demo_meeting.jsonl  demo_meeting_2person.jsonl  demo_meeting_2person_short.jsonl  sample_meeting.jsonl  youtube_strategy_memo.txt
src/helmsman/: __init__.py
src/helmsman/agents/: __init__.py  arbiter.py  base.py  coverage_tracker.py  decision_capture.py  dissent_surface.py  engagement_agent.py  goal_decomposer.py  memory_retriever.py  quiet_activator.py  report_generator.py  steering_agent.py  time_keeper.py  tone_agent.py
src/helmsman/api/: __init__.py  main.py  security.py
src/helmsman/core/: __init__.py  config.py  llm_client.py  logging.py  pricing.py  usage.py
src/helmsman/eval/: __init__.py  audio.py  report.py  runner.py
src/helmsman/models/: __init__.py  decision.py  document.py  face_signal.py  group.py  intervention.py  meeting.py  participant.py  report.py  tone.py  topic.py  utterance.py  voiceprint.py
src/helmsman/repositories/: __init__.py  cosmos.py  decisions.py  documents.py  face_signals.py  groups.py  meetings.py  reports.py
src/helmsman/services/: __init__.py  blob.py  call_buffer.py  call_tick.py  chunking.py  decision_persistence.py  decision_search.py  document_extractor.py  document_pipeline.py  embeddings.py  face_signal_buffer.py  graph_calling.py  graph_play_prompt.py  rag.py  realtime_transcription.py  recording_loop.py  recording_stt.py  search_index.py  teams_bot.py  tone_buffer.py  tts.py
src/helmsman/shared/: __init__.py
tests/: conftest.py  test_agents.py  test_api_smoke.py  test_arbiter.py  test_bot_auto_hangup.py  test_chunking.py  test_decision_model.py  test_decision_persistence.py  test_decision_repository.py  test_decision_search.py  test_engagement_agent.py  test_eval.py  test_face_signals.py  test_graph_calling.py  test_memory_retriever.py  test_models.py  test_report_generator.py  test_repositories.py  test_teams_bot.py  test_time_keeper.py  test_tone_agent.py  test_usage.py
(+31 files in other folders)
