[project]
name = "helmsman"
version = "0.1.0"
description = "Helmsman — Goal-driven AI meeting facilitator for Microsoft Teams (Microsoft Agent Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "shun", email = "s.shunsuke9875@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    # Azure / Microsoft AI
    "openai>=1.30.0",
    "azure-identity>=1.17.0",
    "azure-cosmos>=4.7.0",
    "azure-ai-textanalytics>=5.3.0",
    "azure-cognitiveservices-speech>=1.40.0",
    "azure-storage-blob>=12.20.0",
    "azure-mgmt-resource>=23.1.0",
    # Web framework / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Microsoft Graph
    "msgraph-sdk>=1.5.0",
    # Async / utility
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helmsman"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
