[project]
name = "helmsman"
version = "0.1.0"
description = "Helmsman — Goal-driven AI meeting facilitator for any meeting platform (Microsoft Agent Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "shun", email = "s.shunsuke9875@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    # Microsoft AI / Azure OpenAI
    "openai>=2.37.0",
    "semantic-kernel>=1.42.0",   # azure-ai-projects/agents は SK の依存解決に任せる
    "azure-ai-agents>=1.2.0b3",  # SK 1.42 が要求する pre-release

    # Azure SDKs
    "azure-identity>=1.25.3",
    "azure-cosmos>=4.15.0",
    "azure-cognitiveservices-speech>=1.50.0",
    "azure-ai-textanalytics>=5.4.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-search-documents>=11.5.2",
    "azure-storage-blob>=12.29.0",
    "azure-mgmt-resource>=25.0.0",

    # Teams bot — ACS Call Automation で会議に参加 + STT/TTS in/out
    "azure-communication-callautomation>=1.4.0",
    "azure-communication-identity>=1.5.0",

    # Microsoft Graph
    "msgraph-sdk>=1.57.0",

    # Web framework / API
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",

    # 文書テキスト抽出 (Azure DocIntel が無い dev 環境のフォールバック)
    "pypdf>=5.1.0",

    # Async / utility
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",

    # Observability (azure-monitor-opentelemetry が opentelemetry-instrumentation-fastapi を間接で連れてくる)
    "azure-monitor-opentelemetry>=1.8.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helmsman"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
